# radare2

./: .gitmodules  .travis.yml  config-user.mk.acr  configure  configure.acr  meson.build  radare2.spec  subprojects  travis-extract-var.sh  travis-script
.github/: upload.sh  vsdevenv.bat  vsdevenv.ps1
.github/workflows/: ci.yml  continuous.yml  windows.yml
binr/: rules.mk
binr/radare2/: meson.build
doc/: repo
libr/: Makefile  config.mk.tail  meson.build  rules.mk
libr/anal/: anal.c  bb.c  fcn.c  meta.c  op.c
libr/cons/: cons.c
libr/core/: Makefile  anal.c  anal.cpp  anal_tp.cpp  asm.cpp  canal.c  cbin.c  cbin.cpp  cio.cpp  cmd.c  cmd_api.cpp  cmd_debug.c  cmd_help.c  cmd_meta.c  cmd_print.c  config.cpp  core.c  core.cpp  disasm.c  disasm.cpp  graph.c  graph.cpp  meson.build  patch.cpp  project.c  visual.c  visual.cpp
libr/flag/: flag.c
libr/flags/: flags.c
libr/include/: r_anal.h  r_cmd.h  r_cmd.hpp  r_core.h  r_flag.h  r_flags.h  r_list.h  r_parse.h  r_print.h  r_userconf.h.acr  r_util.h
libr/main/: radare2.c
libr/parse/: parse.c
libr/unittest/: .gitignore  Makefile  minunit.h  test_base64.cpp  test_bitmap.cpp  test_cmds.cpp  test_debruijn.cpp  test_glob.cpp  test_hashtable.cpp  test_list.cpp  test_queue.cpp  test_range.cpp  test_stack.cpp  test_str.cpp  test_tree.cpp
libr/util/: graph.c  print.c  str.c
mk/: gcc.mk  platform.mk
radare2-regressions/t/: avr  cmd_ahi  cmd_disasm  cmd_flags  cmd_pd
shlr/: Makefile  meson.build  radare2-shell-parser-deps.mk
shlr/spp/: meson.build
sys/: meson_windows_subprojects_init.py
(+7 files in other folders)
